# Customer_Email_Triage_Environment

./: .dockerignore  .gitignore  Dockerfile  README.md  README_HF.md  deploy_to_hf.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py
server/: app.py  email_dataset.py  environment.py  graders.py  main.py  models.py  tasks.py
server/web/: app.js  index.html  style.css
