[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-email-triage"
version = "1.0.0"
description = "Customer Email Triage OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "openai>=1.12.0",
    "python-multipart>=0.0.9",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.main:run"
